# rust_lambda_test

./: .gitignore  package-lock.json  package.json  serverless.yml
benchmark/: Cargo.toml
benchmark/src/: main.rs
node/: package-lock.json  package.json
node/src/: handler.ts
rust/: Cargo.toml
rust/src/: main.rs
