[package]
name = "lambda-benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tui-input = "0.14"
aws-config = "1.1"
aws-sdk-lambda = "1.15"
aws-sdk-cloudwatch = "1.15"
