[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
rand = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
